test/Parse/validate_new_parser_diagnostics.code
// REQUIRES: language_language_parser
// REQUIRES: language_feature_ParserValidation

// Checks that skipping function bodies doesn't cause the new parser validation
// to fail. This can currently be the case because the new parser doesn't
// support skipping, causing validation fail as it generates diagnostics when
// the C++ parser would not.

// RUN: %target-typecheck-verify-language -enable-experimental-feature ParserValidation
// RUN: %target-language-frontend -typecheck %s -enable-experimental-feature ParserValidation -experimental-skip-all-function-bodies

fn bad() {
  _ = [(Int) -> async throws Int]()
  // expected-error@-1{{'throws' may only occur before '->'}}
  // expected-error@-2{{'async' may only occur before '->'}}
}

